--- a/EGNperspectives.html
+++ b/EGNperspectives.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-<h1 class="header">My EGN Perspectives experience, projects, and reflection</h1>
+<h1 class="header">My EGN Perspectives experience</h1>
 <p class="paragraph">My experience with EGN has been very interesting. I felt like a lot of the work I did was busy work.
     Although that's how the class felt I treated it like any other class.
     I understood why the class is important and its mainly to help us get into the mindset of what a software engineer
@@ -33,50 +33,8 @@
     first
     step was just researching a little about a big problem.
 </p>
-
-<ul>
-    <li><a href="Health%20and%20Technology.pptx" target="_blank">a slide show writing about current efforts on global
-        challenges.</a>
-        <p class="inDark">
-            In this assignment I talk about two types of technology in the health topic of global challenges. The first
-            one is a bionic that is a prosthetic arm
-            that sends messages back to the user through the nerves to imitates the sense of touch.
-            <br>
-            The second technology includes nanobots.
-            For this part I talk about a few products being researched like nanobots that can seek and destroy cancer to
-            pills that you can swallow and will administer medicines while monitoring
-            health.
-            <br>
-            From this project I learned that there are a lot of things to think about when you want to create something
-            like
-            documentation on what a product is and that once you create something like the sense of touch you might be
-            able to apply one
-            creation to many others.
-        </p>
-    <li><a href="Hamilton%20University.pdf" target="_blank">a poster of a future solution for facial recognition
-        with bank transactions.</a>
-        <p class="inDark">
-            In this assignment we made groups with a few peers with similar interests, Mine was cyber security. We had
-            theorized
-            about a product that would make bank transactions safer.
-            we saw an opportunity to appeal to bankers and investors who would like more security. We thought first off
-            that banks
-            need to be secure to have any business and investors
-            alike need a place to secure all of their cash. So why don't we make it secure from people who might be
-            monitoring your computer at home like a keylogger.
-            <br>
-            To do this we thought we could do facial recognition and throw on 2FA to make it extra secure. This would
-            make your account super personalized because no transaction will be made unless you are on the camera. This
-            would be a good idea in today's society considering a lot of people already have cameras at home on
-            computers for
-            remote work.
-            <br>
-            I personally think the project was fun to do and a nice break from coding to just think about something
-            futuristic and working with my group mate was enjoyable as well.
-        </p>
-    </li>
-</ul>
-
+<br><br>
+<h1 class="header">My EGN Perspectives Reflection</h1>
 <p class="paragraph">
     After going through the course I have many takeaways. through the semester we had gone through subsections of global challenges in today's society.
     The first was sustainability. In this section we talked about the PlayPump and how a product will sustain. following PlayPump and researching about it we learned
